force-app/main/default/objects/SteelMarket__c/SteelMarket__c.object-meta.xml
<CustomObject>
    <label>市況報告</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>市況報告名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>