force-app/main/default/objects/SteelMarket__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>スクラップ市況</fullName>
            </value>
            <value>
                <fullName>製品市況</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>