force-app/main/default/objects/SteelMarket__c/fields/Unitprice__c.field-meta.xml
<CustomField>
    <fullName>Unitprice__c</fullName>
    <label>単価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>